--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,10 @@
+@import "styles/abstracts/mixins";
+
 .header {
   display: flex;
-  min-height: 48px;
-  padding: 0 22px;
   flex-flow: row wrap;
   align-items: center;
-  border-width: 0 0 1px;
-  border-color: var(--common-border);
-  border-style: solid;
+  min-height: 48px;
+  padding: 0 22px;
+  @include border-bottom(2px);
 }
