--- a/src/components/Signup/Signup.scss
+++ b/src/components/Signup/Signup.scss
@@ -1,12 +1,11 @@
+@import "styles/abstracts/placeholders";
+
 .signup {
   /* Элементы */
 
   &__wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @extend %flex-centered;
     min-height: 100vh;
     background-color: var(--common-background-secondary);
-    background-size: cover;
   }
 }
