--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -1,7 +1,5 @@
-@import "styles/abstracts/placeholders";
-
 .signup {
-  @extend %flex-centered;
+  @mixin flex-centered;
   min-height: 100vh;
   background-color: var(--common-background-secondary);
 }
