--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -1,5 +1,3 @@
-@import "styles/abstracts/mixins";
-
 .input {
   $this: &;
   /* Элементы */
@@ -13,7 +11,7 @@
     margin-bottom: 5px;
     background: 0 0;
     color: currentColor;
-    @include border-bottom;
+    @mixin border-bottom;
     outline: none;
     font-size: 16px;
     font-family: inherit;
@@ -34,7 +32,7 @@
 
   /* Модификаторы */
 
-  &_invalid #{$this}__control {
+  &_invalid $(this)__control {
     border-color: var(--common-alert);
     border-width: 0 0 2px;
     padding-bottom: 0;
