--- a/src/components/UI/Header/Header.css
+++ b/src/components/UI/Header/Header.css
@@ -1,9 +1,3 @@
-@define-mixin border-bottom $width: 1px, $color: var(--common-border), $style: solid {
-  border-width: 0 0 $width;
-  border-color: var(--common-border);
-  border-style: $style;
-}
-
 .header {
   display: flex;
   flex-flow: row wrap;
@@ -11,4 +5,8 @@
   min-height: 48px;
   padding: 0 22px;
   @mixin border-bottom 2px;
+
+  &__user {
+    margin-left: auto;
+  }
 }
