--- a/src/styles/themes/default.css
+++ b/src/styles/themes/default.css
@@ -7,6 +7,7 @@
   --common-alert: #df4b41;
 
   --action-button-background: #ffdb4d;
-
   --panel-background: #f5f5f5;
+  --link-color-secondary: #a5a5a5;
+  --link-color-hover: #f00;
 }
