Рефакторинг компонентов ошибок

--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -2,17 +2,10 @@
   max-width: 400px;
   margin: 0 auto;
   padding: 3% 0 20px;
-  text-align: center;
 
   &__title {
-    display: block;
-    font-size: 120px;
-    font-weight: bold;
-    color: var(--common-background-secondary);
-  }
-
-  &__message {
-    font-size: 14px;
-    line-height: 18px;
+    font-size: 26px;
+    font-weight: normal;
+    margin: 0 0 10px;
   }
 }
