Выделение активных ссылок в меню

--- a/src/components/UI/Nav/Nav.css
+++ b/src/components/UI/Nav/Nav.css
@@ -18,6 +18,10 @@
     text-decoration: none;
     color: var(--link-color-secondary);
 
+    &_active {
+      color: var(--link-color-hover);
+    }
+
     &:hover {
       color: var(--link-color-hover);
     }
