--- a/src/components/UI/FormField/FormField.css
+++ b/src/components/UI/FormField/FormField.css
@@ -1,6 +1,10 @@
 .form-field {
   margin-bottom: 20px;
 
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   &__control {
     margin-bottom: 5px;
   }
