--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,8 +1,8 @@
 .game {
   display: block;
   margin: 0 auto;
-  height: 80vh;
-  width: auto;
-  max-height: 100%;
+  height: 100%;
+  width: 100%;
   background-color: var(--space);
+  object-fit: contain;
 }
