--- a/src/components/GameLayout/GameLayout.css
+++ b/src/components/GameLayout/GameLayout.css
@@ -1,5 +1,9 @@
 .game-layout {
   display: grid;
-  min-height: 100%;
-  grid-template-rows: auto 1fr
+  height: 100vh;
+  grid-template-rows: auto 1fr;
+
+  &__body {
+    min-height: 0;
+  }
 }
