Добавление анимации фона на странице авторизации

--- a/src/views/Signin/Signin.css
+++ b/src/views/Signin/Signin.css
@@ -4,6 +4,18 @@
   background-color: var(--space);
   background-image: url('../../lib/game/assets/backdrop.svg');
   background-size: 50%;
+  backdrop-position: 0;
+  animation: backdrop-scroll 100s infinite linear;
+
+  @keyframes backdrop-scroll {
+    from {
+      background-position: 0;
+    }
+
+    to {
+      background-position: 100%;
+    }
+  }
 
   &__layout {
     display: flex;
